# crypto-market-microstructure

./: .env.example  .gitignore  CLAUDE.md  RAILWAY.md  README.md  docker-compose.yml  pyproject.toml  railway.toml
config/: alerts.yaml  exchanges.yaml  features.yaml  instruments.yaml
db/: init.sql  seed.sql
docs/: ARCHITECTURE.md  PRD.md  agent-architecture.md  runbook.md
services/: __init__.py
services/anomaly-detector/: Dockerfile  __init__.py  main.py  railway.toml
services/dashboard/: Dockerfile  __init__.py  app.py  main.py  railway.toml
services/dashboard/api/: __init__.py  alerts.py  health.py  metrics.py  state.py
services/dashboard/callbacks/: __init__.py  updates.py
services/dashboard/clients/: __init__.py  postgres_client.py  redis_client.py
services/dashboard/components/: __init__.py  alert_list.py  basis_chart.py  cross_exchange.py  depth_heatmap.py  health_panel.py  spread_chart.py  state_card.py
services/dashboard/layouts/: __init__.py  main.py
services/dashboard/static/: index.html
services/dashboard/static/css/: dashboard.css
services/dashboard/static/js/: api.js  app.js  charts.js  websocket.js
services/dashboard/websocket/: __init__.py  updates.py
services/data-ingestion/: Dockerfile  __init__.py  main.py  railway.toml
services/metrics-engine/: Dockerfile  __init__.py  main.py  railway.toml
services/timescaledb/: Dockerfile  railway.toml
src/: __init__.py
src/adapters/: __init__.py
src/adapters/binance/: README.md  __init__.py  adapter.py  normalizer.py  rest.py  websocket.py
src/adapters/okx/: README.md  __init__.py  adapter.py  normalizer.py  rest.py  websocket.py
src/config/: __init__.py  loader.py  models.py
src/detection/: __init__.py  dispatcher.py  evaluator.py  manager.py  persistence.py  storage.py
src/detection/channels/: __init__.py
src/interfaces/: __init__.py  exchange_adapter.py
src/metrics/: __init__.py  aggregator.py  basis.py  depth.py  spread.py  zscore.py
src/models/: __init__.py  alerts.py  health.py  metrics.py  orderbook.py  ticker.py
src/storage/: __init__.py  postgres_client.py  redis_client.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  conftest.py  test_dashboard_api.py  test_dashboard_websocket.py  test_live_connections.py  test_pipeline.py  test_storage.py
tests/unit/: test_aggregator.py  test_basis.py  test_binance_adapter.py  test_depth.py  test_models.py  test_okx_adapter.py  test_redis_client.py  test_spread.py  test_zscore.py
tests/unit/test_dashboard/: __init__.py  test_components.py  test_fetchers.py
tests/unit/test_detection/: __init__.py  test_evaluator.py  test_manager.py  test_persistence.py
